@@ -7,6 +7,7 @@ New Features:
 -AudioOut for both Asio and WDM
 -Added Dynamic Channel, so you can feed whatever you want in it :)
 -Added Beat detector node.
+-Added WaveForm gui node
 
 Bug Fixes:
 -Fixed loop refresh issue
